--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "shallow-equal": "^1.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
