--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "reactstrap": "^8.9.0",
+    "redux": "^4.0.5",
     "shallow-equal": "^1.2.1",
     "sweetalert2": "^10.15.6",
     "web-vitals": "^1.0.1"
