--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.3",
     "react-scripts": "4.0.2",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
