--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.2",
