--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
