--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "reactstrap": "^8.9.0",
+    "recharts": "^2.0.9",
     "redux": "^4.0.5",
     "shallow-equal": "^1.2.1",
     "sweetalert2": "^10.15.6",
