--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "client":"cd client && yarn start",
-    "server":"nodemon server.js",
-    "dev":"concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "client": "cd client && yarn start",
+    "server": "nodemon server.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "concurrently": "^6.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
