--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "mybatis-mapper": "^0.6.5",
     "mysql": "^2.18.1"
   }
 }
