--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "mybatis-mapper": "^0.6.5",
     "mysql": "^2.18.1",
     "proxy": "^1.0.2"
