--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
@@ -23,6 +24,7 @@
     "multer": "^1.4.2",
     "mybatis-mapper": "^0.6.5",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.5.0",
     "proxy": "^1.0.2"
   }
 }
