--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.2",
     "mybatis-mapper": "^0.6.5",
     "mysql": "^2.18.1",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.5.0",
     "proxy": "^1.0.2"
   }
